fixed chat out of box

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -67,6 +67,8 @@
 }
 
 #div_chat {
+    line-height: 25px;
+    font-size: 15px;
     border: 2px solid black;
     position: absolute;
     height: 500px;
